Fix country code display: increase container width and adjust styling for intlTelInput flag dropdown visibility

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -28,11 +28,13 @@
 .card .card-body .form-group .country_input ul.dropdown-menu li a, .modal .modal-body .form-group .country_input ul.dropdown-menu li a{padding:0px 10px;display:block;}
 .card .card-body .form-group .country_input ul.dropdown-menu li a:hover, .modal .modal-body .form-group .country_input ul.dropdown-menu li a:hover{cursor:pointer;}
 .card .card-body .form-group .cus_field_input, .modal .modal-body .form-group .cus_field_input{position: relative;} 
-.card .card-body .form-group .cus_field_input .country_code, .modal .modal-body .form-group .cus_field_input .country_code{position: absolute;top: 1px;left: 2px;width: 55px;border-right: 1px solid #ddd;} 
+.card .card-body .form-group .cus_field_input .country_code, .modal .modal-body .form-group .cus_field_input .country_code{position: absolute;top: 1px;left: 2px;width: 75px;border-right: 1px solid #ddd;z-index: 2;} 
 /*.cus_field_input .intl-tel-input .flag-dropdown{display:none;}*/
-.card .card-body .form-group .cus_field_input .country_code .intl-tel-input input, .modal .modal-body .form-group .cus_field_input .country_code .intl-tel-input input{width: 40px;background: #fdfdff;border: 0px;height: 40px;padding-left: 6px;}
+.card .card-body .form-group .cus_field_input .country_code .intl-tel-input, .modal .modal-body .form-group .cus_field_input .country_code .intl-tel-input{position: relative;width: 100%;}
+.card .card-body .form-group .cus_field_input .country_code .intl-tel-input input, .modal .modal-body .form-group .cus_field_input .country_code .intl-tel-input input{width: 100% !important;background: #fdfdff;border: 0px;height: 40px;padding-left: 47px !important;min-width: 60px;}
+.card .card-body .form-group .cus_field_input .country_code .intl-tel-input .flag-dropdown, .modal .modal-body .form-group .cus_field_input .country_code .intl-tel-input .flag-dropdown{z-index: 10;position: absolute;left: 0;top: 0;}
 .card .card-body .form-group .cus_field_input .country_code .intl-tel-input input:hover, .modal .modal-body .form-group .cus_field_input .country_code .intl-tel-input input:hover, .card .card-body .form-group .cus_field_input .country_code .intl-tel-input input:focus, .modal .modal-body .form-group .cus_field_input .country_code .intl-tel-input input:focus{outline:none;}
-.card .card-body .form-group .cus_field_input input.tel_input, .modal .modal-body .form-group .cus_field_input input.tel_input{padding-left:65px;}  
+.card .card-body .form-group .cus_field_input input.tel_input, .modal .modal-body .form-group .cus_field_input input.tel_input{padding-left:80px;}  
 
 .drop_table_data{position:relative;}
 .drop_table_data .dropdown_list{display:none;position:absolute;top:40px;right:0px;background:#fff;padding:10px;border-radius:4px;box-shadow: 0 0 30px rgb(0 0 0 / 10%);width: 170px;z-index: 9;max-height: 300px;overflow-y: scroll;}
